--- a/styles/index-media-queries.css
+++ b/styles/index-media-queries.css
@@ -212,7 +212,7 @@ Text/Margin Scale:
 
 @media only screen and (max-width: 299px) {
   .contact-snapshot {
-    padding: 7px 9px;
+    padding: 7px 6px;
     gap: 0px;
   }
 
@@ -356,7 +356,6 @@ Text/Margin Scale:
 
   #responsive-menu {
     width: 26rem;
-    height: 50rem;
   }
 
   #responsive-menu,
@@ -798,7 +797,7 @@ Text/Margin Scale:
 
 @media only screen and (min-width: 440px) and (max-width: 499px) {
   h1 {
-    font-size: 4.6rem;
+    font-size: 4.1rem;
   }
 }
 
@@ -956,7 +955,7 @@ Text/Margin Scale:
 
 @media only screen and (min-width: 500px) and (max-width: 519px) {
   .contact-snapshot {
-    gap: 6.6rem;
+    gap: 4.6rem;
   }
 }
 
@@ -978,7 +977,7 @@ Text/Margin Scale:
 
 @media only screen and (min-width: 500px) and (max-width: 569px) {
   h1 {
-    font-size: 5.2rem;
+    font-size: 4.6rem;
   }
 }
 
@@ -1063,7 +1062,7 @@ Text/Margin Scale:
 
 @media only screen and (min-width: 570px) and (max-width: 649px) {
   h1 {
-    font-size: 5.8rem;
+    font-size: 5.2rem;
   }
 }
 
@@ -1346,7 +1345,7 @@ Text/Margin Scale:
   }
 
   .text-container {
-    gap: 2.3rem;
+    gap: 1.6rem;
     width: fit-content;
   }
 
@@ -1664,7 +1663,7 @@ Text/Margin Scale:
 
   .text-container,
   .testimonial {
-    gap: 2.9rem;
+    gap: 2rem;
   }
 
   .who-we-are-section h2,
@@ -1679,7 +1678,7 @@ Text/Margin Scale:
   .who-we-are-text,
   .testimonials-page:link,
   .testimonials-page:visited {
-    font-size: 2.9rem;
+    font-size: 1.8rem;
   }
 
   .testimonials-container {
